folder structure solve

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -57,6 +57,10 @@
             <section>
                 <div class="container  " style="position:absolute ; top: 120px;">
                     <nav class="navbar navbar-expand-sm px-3" style="background-color:rgb(255,179,66,255);">
+                        <a class="navbar-brand d-none r-show " href="#">
+                            <div class="fs-1" style="font-weight: bolder; color:#1c2752;"> BlueCo<span
+                                    style="color:rgb(255,179,66,255)">ll</span>ar</div>
+                        </a>
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
