--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
 <body>
     <header>
-
-        <div class="container  pt-5 pb-2 d-flex justify-content-between">
+        <div class=" Opening-time container   pb-2 d-flex  justify-content-between ">
             <div class="fs-5" style="font-weight: bolder; color:#1c2752;">Opening Hours: 06.00 to 20.00</div>
             <div class="fs-4 r-none " style="font-weight: bolder; color:#1c2752;">
                 <i class="fa-brands fa-instagram pe-3"></i>
@@ -25,66 +24,61 @@
                 <i class="fa-brands fa-linkedin"></i>
             </div>
         </div>
-        </section>
-        <div class="container" style="position: relative;">
-            <section class="">
-                <div class="container pt-4 pb-5 d-flex justify-content-between">
-                    <div class="fs-1" style="font-weight: bolder; color:#1c2752;"> BlueCo<span
-                            style="color:rgb(255,179,66,255)">ll</span>ar</div>
-                    <div class="r-none">
-                        <div class="d-flex ">
-                            <div class="d-flex align-items-center ">
-                                <i class="fa-regular fa-envelope fs-2 p-3  rounded-circle me-2"
-                                    style="background-color:rgb(255,179,66,255) "></i>
-                                <div>
-                                    <span class="fs-5 " style="color:#1c2752 ; font-weight: bolder"> Mail Us</span> <br>
-                                    <span>info@ex.gmail.com</span>
-                                </div>
-                            </div>
-                            <div class="d-flex align-items-center ms-5">
-                                <i class="fa-solid fa-phone fs-2 p-3  rounded-circle me-2"
-                                    style="background-color:rgb(255,179,66,255) "></i>
-
-                                <div>
-                                    <span class="fs-5 " style="color:#1c2752 ; font-weight: bolder">Call Us</span> <br>
-                                    <span>+01 254 45854</span>
-                                </div>
-                            </div>
+        <div class="r-none">
+            <div class="container pt-4 pb-5 d-flex justify-content-between ">
+                <div class="fs-1 r-none" style="font-weight: bolder; color:#1c2752;"> BlueCo<span
+                        style="color:rgb(255,179,66,255)">ll</span>ar</div>
+                <div class="communication">
+                    <div class="r-none d-flex align-items-center ">
+                        <i class="fa-regular fa-envelope fs-2 p-3  rounded-circle me-2"
+                            style="background-color:rgb(255,179,66,255) "></i>
+                        <div>
+                            <span class="fs-5 " style="color:#1c2752 ; font-weight: bolder"> Mail Us</span> <br>
+                            <span>info@ex.gmail.com</span>
                         </div>
                     </div>
-                </div>
-            </section>
-            <section>
-                <div class="container  " style="position:absolute ; top: 120px;">
-                    <nav class="navbar navbar-expand-sm px-3" style="background-color:rgb(255,179,66,255);">
-                        <a class="navbar-brand d-none r-show " href="#">
-                            <div class="fs-1" style="font-weight: bolder; color:#1c2752;"> BlueCo<span
-                                    style="color:rgb(255,179,66,255)">ll</span>ar</div>
-                        </a>
+                    <div class=" r-none d-flex align-items-center ms-5">
+                        <i class="fa-solid fa-phone fs-2 p-3  rounded-circle me-2"
+                            style="background-color:rgb(255,179,66,255) "></i>
 
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav fs-5 " style="color:#1c2752 ; font-weight: bolder">
-                                <li class="nav-item me-4"> <a class="nav-link" href="">Home</a> </li>
-                                <li class="nav-item me-4"> <a class="nav-link" href="">About Us</a> </li>
-                                <li class="nav-item me-4"> <a class="nav-link" href="">Pages</a> </li>
-                                <li class="nav-item me-4"> <a class="nav-link" href="">Services</a> </li>
-                                <li class="nav-item me-4"> <a class="nav-link" href="">Blog</a> </li>
-                                <li class="nav-item me-4"> <a class="nav-link" href="">Contact Us</a> </li>
-                            </ul>
-                            <h5 class="navbar-nav ms-auto p-3" style="background-color:#1c2752 ; color: aliceblue;">Have
-                                Any
-                                Question</h5>
-
+                        <div>
+                            <span class="fs-5 " style="color:#1c2752 ; font-weight: bolder">Call Us</span> <br>
+                            <span>+01 254 45854</span>
                         </div>
-                    </nav>
+                    </div>
+
                 </div>
-            </section>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center" style="position:relative ;">
+            <div class="container" style="position:absolute ; top: -10px; ">
+                <nav class="navbar navbar-expand-sm px-3" style="background-color:rgb(255,179,66,255);">
+                    <a class="navbar-brand nav-logo " href="#">
+                        <div class="fs-1" style="font-weight: bolder; color:#1c2752;"> BlueCo<span>ll</span>ar</div>
+                    </a>
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav fs-5 " style="color:#1c2752 ; font-weight: bolder">
+                            <li class="nav-item me-4"> <a class="nav-link" href="">Home</a> </li>
+                            <li class="nav-item me-4"> <a class="nav-link" href="">About Us</a> </li>
+                            <li class="nav-item me-4"> <a class="nav-link" href="">Pages</a> </li>
+                            <li class="nav-item me-4"> <a class="nav-link" href="">Services</a> </li>
+                            <li class="nav-item me-4"> <a class="nav-link" href="">Blog</a> </li>
+                            <li class="nav-item me-4"> <a class="nav-link" href="">Contact Us</a> </li>
+                        </ul>
+                        <h5 class="navbar-nav ms-auto p-3" style="background-color:#1c2752 ; color: aliceblue;">Have
+                            Any
+                            Question</h5>
+
+                    </div>
+                </nav>
+            </div>
         </div>
     </header>
     <main style="height:700px; width: 100%; background-color: #8d9ee4;">
@@ -92,12 +86,17 @@
     </main>
 
     <footer style=" background-color: #1c2752;">
-        <section class="container ">
-            <div class="container pt-4 pb-5 d-flex text-light ">
-                <div class="fs-1 r-none" style="font-weight: bolder; "> BlueCo<span
-                        style="color:rgb(255,179,66,255)">ll</span>ar</div>
-                <div class="d-flex ms-auto r-none">
-                    <div class="d-flex align-items-center  me-4">
+
+        <div class="container pt-4 pb-5  text-light ">
+
+            <div class="row g-5">
+                <div class="col-sm-5">
+                    <div class="fs-1 " style="font-weight: bolder; "> BlueCo<span
+                            style="color:rgb(255,179,66,255)">ll</span>ar
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="d-flex  align-items-center  ">
                         <i class="fa-regular fa-envelope fs-2 p-3  rounded-circle me-2"
                             style="background-color:rgb(255,179,66,255) "></i>
                         <div>
@@ -105,7 +104,9 @@
                             <span>info@ex.gmail.com</span>
                         </div>
                     </div>
-                    <div class="d-flex align-items-center mx-5">
+                </div>
+                <div class=" callUs col-sm-3 ">
+                    <div class="d-flex align-items-center  ">
                         <i class="fa-solid fa-phone fs-2 p-3  rounded-circle me-2"
                             style="background-color:rgb(255,179,66,255) "></i>
 
@@ -114,7 +115,9 @@
                             <span>+01 254 45854</span>
                         </div>
                     </div>
-                    <div class="d-flex align-items-center ms-4">
+                </div>
+                <div class="col-sm-2">
+                    <div class=" d-flex align-items-center ">
                         <i class="fa-solid fa-phone fs-2 p-3  rounded-circle me-2"
                             style="background-color:rgb(255,179,66,255) "></i>
 
@@ -122,15 +125,17 @@
                             <span class="fs-5 " style=" font-weight: bolder">Location</span> <br>
                             <span>Dhaka</span>
                         </div>
+
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+
         <section>
 
             <div class="container text-center  text-light">
                 <hr>
-                <div class="row py-4 ">
+                <div class="row py-4  gy-4 ">
                     <div class="col-sm-5  border-end">
                         <div>
                             <div>
@@ -140,7 +145,7 @@
                                     architecto perspiciatis quidem culpa provident nisi, repudiandae .</p>
 
                             </div>
-                            <div class="d-flex justify-content-start pt-4">
+                            <div class=" pt-4">
                                 <div class="fs-5 " style="font-weight: bolder; ">
                                     <i class="fa-brands fa-instagram p-3 me-3 rounded-circle "
                                         style="background-color:rgba(240, 248, 255, 0.109);"></i>
@@ -155,7 +160,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4  border-end ">
+                    <div class="col-sm-4  border-end  ">
                         <div class="d-flex justify-content-evenly text-start">
                             <div>
                                 <p class="fs-5">Explore</p>
@@ -177,7 +182,7 @@
                         </div>
                     </div>
                     <div class="col-sm-3 ">
-                        <div class=" d-flex justify-content-evenly text-start">
+                        <div class=" text-start ms-5">
                             <div>
                                 <p class="fs-5">Explore</p>
                                 <p class="py-0">About us</p>
@@ -185,6 +190,9 @@
                                 <p>Offers</p>
                                 <p>Pricing</p>
                                 <p>FAQ</p>
+                            </div>
+                            <div>
+
                             </div>
 
                         </div>
