--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
 <body>
     <header>
-        <div class=" Opening-time container   pb-2 d-flex  justify-content-between ">
+        <div class="  container  pt-sm-5 pb-2 pt-lx-5 d-flex  justify-content-between ">
             <div class="fs-5" style="font-weight: bolder; color:#1c2752;">Opening Hours: 06.00 to 20.00</div>
-            <div class="fs-4 r-none " style="font-weight: bolder; color:#1c2752;">
+            <div class="fs-4 d-none d-md-flex" style="font-weight: bolder; color:#1c2752;">
                 <i class="fa-brands fa-instagram pe-3"></i>
                 <i class="fa-brands fa-facebook pe-3"></i>
                 <i class="fa-brands fa-twitter pe-3"></i>
                 <i class="fa-brands fa-linkedin"></i>
             </div>
         </div>
-        <div class="r-none">
-            <div class="container pt-4 pb-5 d-flex justify-content-between ">
-                <div class="fs-1 r-none" style="font-weight: bolder; color:#1c2752;"> BlueCo<span
+        <div class="d-flex ">
+            <div class="container container-md pt-4 pb-5 d-none d-md-flex  justify-content-between ">
+                <div class="fs-1 " style="font-weight: bolder; color:#1c2752;"> BlueCo<span
                         style="color:rgb(255,179,66,255)">ll</span>ar</div>
-                <div class="communication">
-                    <div class="r-none d-flex align-items-center ">
+                <div class="d-md-flex d-none">
+                    <div class="d-flex align-items-center ">
                         <i class="fa-regular fa-envelope fs-2 p-3  rounded-circle me-2"
                             style="background-color:rgb(255,179,66,255) "></i>
                         <div>
@@ -37,7 +37,7 @@
                             <span>info@ex.gmail.com</span>
                         </div>
                     </div>
-                    <div class=" r-none d-flex align-items-center ms-5">
+                    <div class=" d-flex align-items-center ms-5">
                         <i class="fa-solid fa-phone fs-2 p-3  rounded-circle me-2"
                             style="background-color:rgb(255,179,66,255) "></i>
 
@@ -51,10 +51,10 @@
             </div>
         </div>
         <div class="d-flex justify-content-center" style="position:relative ;">
-            <div class="container" style="position:absolute ; top: -10px; ">
+            <div class="container " style="position:absolute ; top: -10px; ">
                 <nav class="navbar navbar-expand-sm px-3" style="background-color:rgb(255,179,66,255);">
-                    <a class="navbar-brand nav-logo " href="#">
-                        <div class="fs-1" style="font-weight: bolder; color:#1c2752;"> BlueCo<span>ll</span>ar</div>
+                    <a class="navbar-brand nav-logo d-md-none d-flex" href="#">
+                        <div class="fs-1 " style="font-weight: bolder; color:#1c2752;"> BlueCo<span>ll</span>ar</div>
                     </a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -64,7 +64,7 @@
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav fs-5 " style="color:#1c2752 ; font-weight: bolder">
+                        <ul class="navbar-nav fs-md-5" style="color:#1c2752 ; font-weight: bolder">
                             <li class="nav-item me-4"> <a class="nav-link" href="">Home</a> </li>
                             <li class="nav-item me-4"> <a class="nav-link" href="">About Us</a> </li>
                             <li class="nav-item me-4"> <a class="nav-link" href="">Pages</a> </li>
@@ -87,15 +87,15 @@
 
     <footer style=" background-color: #1c2752;">
 
-        <div class="container pt-4 pb-5  text-light ">
+        <div class=" container-lg pt-4 pb-5  text-light ">
 
-            <div class="row g-5">
-                <div class="col-sm-5">
+            <div class="row g-5  ">
+                <div class="col-xl-5 col-md-12">
                     <div class="fs-1 " style="font-weight: bolder; "> BlueCo<span
                             style="color:rgb(255,179,66,255)">ll</span>ar
                     </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-xl-2 col-md-4">
                     <div class="d-flex  align-items-center  ">
                         <i class="fa-regular fa-envelope fs-2 p-3  rounded-circle me-2"
                             style="background-color:rgb(255,179,66,255) "></i>
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                 </div>
-                <div class=" callUs col-sm-3 ">
+                <div class=" callUs col-xl-3  col-md-4 d-flex justify-content-xl-center ">
                     <div class="d-flex align-items-center  ">
                         <i class="fa-solid fa-phone fs-2 p-3  rounded-circle me-2"
                             style="background-color:rgb(255,179,66,255) "></i>
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-xl-2 col-md-4">
                     <div class=" d-flex align-items-center ">
                         <i class="fa-solid fa-phone fs-2 p-3  rounded-circle me-2"
                             style="background-color:rgb(255,179,66,255) "></i>
@@ -136,10 +136,10 @@
             <div class="container text-center  text-light">
                 <hr>
                 <div class="row py-4  gy-4 ">
-                    <div class="col-sm-5  border-end">
+                    <div class="col-md-5  border-end">
                         <div>
                             <div>
-                                <p class="text-start pe-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                <p class="text-start px-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     Assumenda
                                     quos quod laborum
                                     architecto perspiciatis quidem culpa provident nisi, repudiandae .</p>
@@ -160,8 +160,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4  border-end  ">
-                        <div class="d-flex justify-content-evenly text-start">
+                    <div class="col-md-4  border-end  ">
+                        <div class="d-flex justify-content-evenly align-items-sm-start text-start">
                             <div>
                                 <p class="fs-5">Explore</p>
                                 <p class="py-0">About us</p>
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 ">
+                    <div class="col-md-3 ">
                         <div class=" text-start ms-5">
                             <div>
                                 <p class="fs-5">Explore</p>
