--- a/index.html
+++ b/index.html
@@ -64,15 +64,17 @@
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav fs-md-5" style="color:#1c2752 ; font-weight: bolder">
-                            <li class="nav-item me-4"> <a class="nav-link" href="">Home</a> </li>
-                            <li class="nav-item me-4"> <a class="nav-link" href="">About Us</a> </li>
-                            <li class="nav-item me-4"> <a class="nav-link" href="">Pages</a> </li>
-                            <li class="nav-item me-4"> <a class="nav-link" href="">Services</a> </li>
-                            <li class="nav-item me-4"> <a class="nav-link" href="">Blog</a> </li>
-                            <li class="nav-item me-4"> <a class="nav-link" href="">Contact Us</a> </li>
+                        <ul class="navbar-nav fs-md-5  " style="color:#1c2752 ; font-weight: bolder">
+                            <li class="nav-item me-4 me-md-2"> <a class="nav-link" href="">Home</a> </li>
+                            <li class="nav-item me-4 me-md-2"> <a class="nav-link" href="">About Us</a> </li>
+                            <li class="nav-item me-4 me-md-2"> <a class="nav-link" href="">Pages</a> </li>
+                            <li class="nav-item me-4 me-md-2"> <a class="nav-link" href="">Services</a> </li>
+                            <li class="nav-item me-4 me-md-2"> <a class="nav-link" href="">Blog</a> </li>
+                            <li class="nav-item me-4 me-md-2"> <a class="nav-link" href="">Contact Us</a> </li>
                         </ul>
-                        <h5 class="navbar-nav ms-auto p-3" style="background-color:#1c2752 ; color: aliceblue;">Have
+                        <h5 class="navbar-nav ms-auto p-3 fs-md-5 nav-button"
+                            style="background-color:#1c2752 ; color: aliceblue;">
+                            Have
                             Any
                             Question</h5>
 
