--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <header>
-        <div class="  container  pt-sm-5 pb-2 pt-lx-5 d-flex  justify-content-between ">
+        <div class="container-lg  pt-sm-5 pb-2 pt-lx-5 d-flex  justify-content-between ">
             <div class="fs-5" style="font-weight: bolder; color:#1c2752;">Opening Hours: 06.00 to 20.00</div>
-            <div class="fs-4 d-none d-md-flex" style="font-weight: bolder; color:#1c2752;">
+            <div class="fs-4 d-none d-sm-flex" style="font-weight: bolder; color:#1c2752;">
                 <i class="fa-brands fa-instagram pe-3"></i>
                 <i class="fa-brands fa-facebook pe-3"></i>
                 <i class="fa-brands fa-twitter pe-3"></i>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="d-flex ">
-            <div class="container container-md pt-4 pb-5 d-none d-md-flex  justify-content-between ">
+            <div class=" container-lg pt-4 pb-5 d-none d-md-flex  justify-content-between ">
                 <div class="fs-1 " style="font-weight: bolder; color:#1c2752;"> BlueCo<span
                         style="color:rgb(255,179,66,255)">ll</span>ar</div>
                 <div class="d-md-flex d-none">
@@ -51,8 +51,8 @@
             </div>
         </div>
         <div class="d-flex justify-content-center" style="position:relative ;">
-            <div class="container " style="position:absolute ; top: -10px; ">
-                <nav class="navbar navbar-expand-sm px-3" style="background-color:rgb(255,179,66,255);">
+            <div class="container-lg " style="position:absolute ; top: -10px; ">
+                <nav class="navbar navbar-expand-md px-3" style="background-color:rgb(255,179,66,255);">
                     <a class="navbar-brand nav-logo d-md-none d-flex" href="#">
                         <div class="fs-1 " style="font-weight: bolder; color:#1c2752;"> BlueCo<span>ll</span>ar</div>
                     </a>
@@ -91,7 +91,7 @@
 
         <div class=" container-lg pt-4 pb-5  text-light ">
 
-            <div class="row g-5  ">
+            <div class="row g-4  ">
                 <div class="col-xl-5 col-md-12">
                     <div class="fs-1 " style="font-weight: bolder; "> BlueCo<span
                             style="color:rgb(255,179,66,255)">ll</span>ar
@@ -135,10 +135,10 @@
 
         <section>
 
-            <div class="container text-center  text-light">
+            <div class="container-lg  p-lg-1 text-center  text-light">
                 <hr>
                 <div class="row py-4  gy-4 ">
-                    <div class="col-md-5  border-end">
+                    <div class="col-md-5  border-end ">
                         <div>
                             <div>
                                 <p class="text-start px-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
