--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <header>
         <div class="container-lg  pt-sm-5 pb-2 pt-lx-5 d-flex  justify-content-between ">
-            <div class="fs-5" style="font-weight: bolder; color:#1c2752;">Opening Hours: 06.00 to 20.00</div>
-            <div class="fs-4 d-none d-sm-flex" style="font-weight: bolder; color:#1c2752;">
+            <div class="fs-5 fw-bold" style=" color:#1c2752;">Opening Hours: 06.00 to 20.00</div>
+            <div class="fs-4 d-none d-sm-flex" style=" color:#1c2752;">
                 <i class="fa-brands fa-instagram pe-3"></i>
                 <i class="fa-brands fa-facebook pe-3"></i>
                 <i class="fa-brands fa-twitter pe-3"></i>
@@ -26,14 +26,14 @@
         </div>
         <div class="d-flex ">
             <div class=" container-lg pt-4 pb-5 d-none d-md-flex  justify-content-between ">
-                <div class="fs-1 " style="font-weight: bolder; color:#1c2752;"> BlueCo<span
+                <div class="fs-1 fw-bold " style=" color:#1c2752;"> BlueCo<span
                         style="color:rgb(255,179,66,255)">ll</span>ar</div>
                 <div class="d-md-flex d-none">
                     <div class="d-flex align-items-center ">
                         <i class="fa-regular fa-envelope fs-2 p-3  rounded-circle me-2"
                             style="background-color:rgb(255,179,66,255) "></i>
                         <div>
-                            <span class="fs-5 " style="color:#1c2752 ; font-weight: bolder"> Mail Us</span> <br>
+                            <span class="fs-5  fw-bold" style="color:#1c2752 ; "> Mail Us</span> <br>
                             <span>info@ex.gmail.com</span>
                         </div>
                     </div>
@@ -42,7 +42,7 @@
                             style="background-color:rgb(255,179,66,255) "></i>
 
                         <div>
-                            <span class="fs-5 " style="color:#1c2752 ; font-weight: bolder">Call Us</span> <br>
+                            <span class="fs-5 fw-bold " style="color:#1c2752 ; ">Call Us</span> <br>
                             <span>+01 254 45854</span>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
             <div class="container-lg " style="position:absolute ; top: -10px; ">
                 <nav class="navbar navbar-expand-md px-3" style="background-color:rgb(255,179,66,255);">
                     <a class="navbar-brand nav-logo d-md-none d-flex" href="#">
-                        <div class="fs-1 " style="font-weight: bolder; color:#1c2752;"> BlueCo<span>ll</span>ar</div>
+                        <div class="fs-1  fw-bold" style=" color:#1c2752;"> BlueCo<span>ll</span>ar</div>
                     </a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -93,8 +93,7 @@
 
             <div class="row g-4  ">
                 <div class="col-xl-5 col-md-12">
-                    <div class="fs-1 " style="font-weight: bolder; "> BlueCo<span
-                            style="color:rgb(255,179,66,255)">ll</span>ar
+                    <div class="fs-1 fw-bold "> BlueCo<span style="color:rgb(255,179,66,255)">ll</span>ar
                     </div>
                 </div>
                 <div class="col-xl-2 col-md-4">
@@ -138,7 +137,7 @@
             <div class="container-lg  p-lg-1 text-center  text-light">
                 <hr>
                 <div class="row py-4  gy-4 ">
-                    <div class="col-md-5  border-end ">
+                    <div class="col-md-5   border-end ">
                         <div>
                             <div>
                                 <p class="text-start px-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -148,7 +147,7 @@
 
                             </div>
                             <div class=" pt-4">
-                                <div class="fs-5 " style="font-weight: bolder; ">
+                                <div class="fs-5 fw-bold">
                                     <i class="fa-brands fa-instagram p-3 me-3 rounded-circle "
                                         style="background-color:rgba(240, 248, 255, 0.109);"></i>
                                     <i class="fa-brands fa-facebook p-3 me-3 rounded-circle "
@@ -183,7 +182,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 ">
+                    <div class="col-md-3  ">
                         <div class=" text-start ms-5">
                             <div>
                                 <p class="fs-5">Explore</p>
